SkillUp/force-app/main/default/objects/Account/fields/Account_s_Relationship_value__c.field-meta.xml
<CustomField>
    <fullName>Account_s_Relationship_value__c</fullName>
    <label>Account’s Relationship value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>