SkillUp/force-app/main/default/objects/Account/fields/Contact_Level__c.field-meta.xml
<CustomField>
    <fullName>Contact_Level__c</fullName>
    <label>Contact Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Ternary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>