SkillUp/force-app/main/default/objects/Account/fields/Last_Month_Dues__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_Dues__c</fullName>
    <inlineHelpText>This field contains the total course fees of all the employees of the company enrolled in Skill Up training.</inlineHelpText>
    <label>Last Month Dues</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>