SkillUp/force-app/main/default/objects/Account/fields/Next_Catch_Up__c.field-meta.xml
<CustomField>
    <fullName>Next_Catch_Up__c</fullName>
    <label>Next Catch-Up</label>
    <type>DateTime</type>
</CustomField>