SkillUp/force-app/main/default/objects/Account/validationRules/IfOwnershipIsPublicFillAnnualRevenue.validationRule-meta.xml
<ValidationRule>
    <fullName>IfOwnershipIsPublicFillAnnualRevenue</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL( Ownership , &#39;Public&#39;) ,  ISNULL( AnnualRevenue) , false)</errorConditionFormula>
    <errorDisplayField>AnnualRevenue</errorDisplayField>
    <errorMessage>Please fill the Annual Revenue as Ownership of this Account is public.</errorMessage>
</ValidationRule>