SkillUp/force-app/main/default/objects/Account/listViews/Corporations_Connected_With_SkillUp.listView-meta.xml
<ListView>
    <fullName>Corporations_Connected_With_SkillUp</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Corporations Connected With SkillUp</label>
</ListView>